# prism-engine

./: .gitignore  Cargo.toml  README.md  build-bridge.sh  build.rs  xcrun
compute-core/: ARCHITECTURE.md  Cargo.toml  build.rs
compute-core/benches/: benchmark_placement.rs
compute-core/diag/: iosurface_pixelbuffer_diag  iosurface_pixelbuffer_diag.mm
compute-core/docs/: fused-metal-dispatch-map.md
compute-core/src/: analysis.rs  ane_bridge.rs  ane_compile.rs  ane_keepalive.rs  arena.rs  arena_lifecycle.rs  arena_pool.rs  assessment.rs  attention.rs  audio_provider.rs  bridge.rs  candle_cpu_backend.rs  capability.rs  compile_pipeline.rs  compile_state.rs  compute_lane.rs  compute_service.rs  config.rs  config_namespace.rs  copy_ledger.rs  coreml_audit.rs  coreml_bridge.rs  coreml_pipeline.rs  coreml_state.rs  cpu_benchmarks.rs  cpu_worker_pool.rs  crash_breadcrumb.rs  diffusion_provider.rs  editing.rs  engine.rs  engine_error.rs  engine_policy.rs  engine_receipts.rs  executor.rs  executor_projection.rs  exo.rs  experiment.rs  external_array.rs  ffi.rs  fusion_region.rs  (+73 more)
compute-core/src/agent/: mod.rs
compute-core/src/ane/: draft_model.rs  hot_row_predictor.rs  kv_decompress_program.rs  mod.rs  moe_scheduler.rs  sink_detector.rs  weight_row_cache.rs
compute-core/src/audio/: encoder.rs  mod.rs  preprocess.rs
compute-core/src/autopsy/: mod.rs  patch.rs  replay.rs  tracer.rs
compute-core/src/backend/: accelerate.rs  accelerate_ffi.rs  accelerate_lane.rs  authority.rs  coreml.rs  coreml_iosurface.rs  coreml_lane.rs  cpu_attn.rs  evaluation.rs  flex_dispatch.rs  graph.rs  heterogeneous_executor.rs  intel_level_zero.rs  intel_usm.rs  metal_consumer.rs  metal_iosurface.rs  mod.rs  placement.rs  residency.rs  routing.rs  tensor_registry.rs  unified_arena.rs
compute-core/src/benchmark/: admission.rs  intel.rs  mod.rs  perf.rs
compute-core/src/bridge/: ane_private.h  ane_weight_dict.h  ane_weight_dict.mm  coreml_arena.h  coreml_arena.mm  coreml_bridge.h  coreml_exec.mm  coreml_state.mm
compute-core/src/cache/: chunk_kv.rs  evolkv.rs  mod.rs  paged_ssd_cache.rs  prefix_cache.rs
compute-core/src/calibration/: accelerate.rs  forward_pass.metal  mod.rs
compute-core/src/compilation/: activation_abi.rs  admission.rs  ane_admission_gate.rs  ane_eligibility.rs  ane_lane.rs  apple_installation.rs  epoch_scheduler.rs  evidence_probe.rs  failure_injector.rs  mod.rs  phase_ir.rs  profitability.rs  qualification_gate.rs  region_catalogue.rs  region_planner.rs  staging.rs  tri_lane.rs
compute-core/src/compiler/: backend_assessment.rs  compile_schedule.rs  graph_optimizer.rs  mod.rs  pass.rs  pipeline_tests.rs  scheduled.rs  semantic.rs
compute-core/src/compute_image/: adapter.rs  alpha_types.rs  ane_prefill.rs  apple_cimage_manifest.rs  apple_shared_arena.rs  cimage_loader.rs  cluster_assign.metal  compaction.rs  compatibility.rs  compile.rs  compile_coreml.rs  compile_hw.rs  diag.rs  execution_shape.rs  fallback_plan.rs  fusion_abi.rs  fusion_plan.rs  fusion_receipts.rs  fusion_sealing.rs  fusion_tensix.rs  hf.rs  hw_assessment.rs  hw_bench_suite.rs  kernel_provider.rs  kv_interleave.rs  kv_plan.rs  layout_tensix.rs  manifest.rs  metal_codegen.rs  metal_codegen_model_test.rs  metal_epilogue.rs  metal_pipeline.rs  mod.rs  paged_cache.rs  phase_dag.rs  phase_dag_test.rs  phase_fallback.rs  phase_graph.rs  phase_graph_binding.rs  phase_graph_builder.rs  (+16 more)
compute-core/src/compute_image_v0/: emitter.rs  evidence.rs  mod.rs  resolver.rs  schema.rs  verifier.rs
compute-core/src/config/: hardware.rs  limits.rs  mod.rs  network.rs  operation_route.rs  parser.rs
compute-core/src/contracts/: mod.rs
compute-core/src/coreml/: executor.rs  fixture.rs  mod.rs
compute-core/src/decode_attribution/: artifact_hash.rs  breadcrumb.rs  coreml_minimal_repro.rs  decode_microphase_shape_map.rs  defect_clustering.rs  environment.rs  gap_report.rs  graph_catalog.rs  harness.rs  lattice.rs  lattice_validation.rs  matrices.rs  mod.rs  negative_evidence.rs  receipt.rs  report.rs  suite_manifest.rs  tensix_decode_plan.rs  timer_calibration.rs
compute-core/src/diffusion/: canvas.rs  mod.rs  sampler.rs  scheduler.rs
compute-core/src/evidence/: apple_tri_lane_calibration.rs  mod.rs
compute-core/src/exo/: autoscaler.rs  cluster.rs  distributed_kv.rs  hardware.rs  mod.rs
compute-core/src/generation/: audio_to_audio.rs  audio_to_text.rs  diffusiongemma.rs  image_to_image.rs  mod.rs  text_to_image.rs  text_to_speech.rs  video_generation.rs
compute-core/src/inference/: execution_image_state.rs  inference_session_state.rs  inference_step_state.rs  mod.rs  (+1 more)
compute-core/tests/: accelerate_qualification.rs  ane_activation_waterfall.rs  ane_alignment_sweep.rs  ane_batch_decode.rs  ane_batch_limits.rs  ane_big_batch_util.rs  ane_binding_correctness.rs  ane_combined_techniques.rs  ane_conv2d_sweep.rs  ane_crossing_overhead.rs  ane_ffn_limit.rs  ane_forced_chunking.rs  ane_fused_depth.rs  ane_fused_streams.rs  ane_fused_transformer.rs  ane_gpu_ring_buffer.rs  ane_hidden_dim_spill.rs  ane_keepalive.rs  ane_latency_evidence.rs  ane_matmul_streams.rs  ane_matmul_utilization.rs  ane_max_throughput.rs  ane_quant_io.rs  ane_real_concurrent_execution.rs  ane_swiglu_fusion.rs  ane_throughput_evidence.rs  apple_tri_lane_fallback.rs  apple_tri_lane_iosurface_integration.rs  apple_tri_lane_soak.rs  asymmetric_coprocessing.rs  attn_lane_crossover.rs  backend_benchmark.rs  backend_conformance.rs  base3_gemv.rs  bit_accurate_parity.rs  bitplane_gemv.rs  branch_rejoin_bisection.rs  channel_factorized.rs  cimage_safety.rs  cimage_zero_copy.rs  (+66 more)
mlx-rs-core/: Cargo.toml
mlx-rs-core/src/: audio.rs  cache.rs  convert.rs  lib.rs  memory.rs  metal_kernels.rs  speculative.rs  utils.rs
mlx-rs-fork/mlx-sys/: Cargo.toml  build.rs  patch_preamble.py
models/qwen3-tts-core/: Cargo.toml
models/qwen3-tts-mlx/: Cargo.toml  README.md  STREAMING.md  prompts.toml
prism-bridge/: Cargo.toml
prism-bridge/src/: lib.rs
prism-ffi/: Cargo.toml
prism-ffi/src/: lib.rs
prism-napi/: Cargo.toml
prism-napi/src/: lib.rs
(+685 files in other folders)
