[workspace]
resolver = "2"

members = [
    ".",
    "compute-core",
    "evidence-schema",
    "prism-ffi",
    "mlx-rs-fork/mlx-rs",
    "mlx-rs-fork/mlx-sys",
    "mlx-rs-fork/mlx-macros",
    "mlx-rs-fork/mlx-internal-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Tribunus Dev"]
repository = "https://github.com/Tribunus-dev/prism-engine"
documentation = "https://github.com/Tribunus-dev/prism-engine"
keywords = ["inference", "apple-silicon"]
categories = ["science", "wasm"]

[workspace.dependencies]
mlx-internal-macros = { path = "mlx-rs-fork/mlx-internal-macros" }
mlx-macros = { path = "mlx-rs-fork/mlx-macros" }
mlx-sys = { path = "mlx-rs-fork/mlx-sys" }
mlx-rs = { path = "mlx-rs-fork/mlx-rs" }
bytemuck = "1"
float_eq = "1"
pretty_assertions = "1.4.0"
dyn-clone = "1"
half = "2"
mach-sys = "0.5"
num-complex = "0.4"
num_enum = "0.7"
num-traits = "0.2"
paste = "1"
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
safetensors = "0.6"
tempfile = "3"
bindgen = "0.72"
cmake = "0.1"
cc = "1"
memmap2 = "0.9"
syn = { version = "2", features = ["full"] }
quote = "1"
darling = "0.21"
proc-macro2 = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
libc = "0.2"
parking_lot = "0.12"
rayon = "1"
clap = { version = "4", features = ["derive"] }

[package]
name = "prism-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Palettized LUT inference runtime with Metal GPU acceleration"
repository = "https://github.com/Tribunus-dev/prism-engine"

[lib]
name = "prism_engine"
path = "src/lib.rs"

[[bin]]
name = "prism"
path = "src/bin/prism.rs"

[[bin]]
name = "prism-server"
path = "src/bin/prism_server.rs"
required-features = ["server"]

[dependencies]
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }
half = "2"
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", optional = true, features = ["cors"] }
tokio-stream = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net", "signal"] }
hf-hub = "0.4"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
rayon = "1"
rand = "0.8"
sha2 = { version = "0.10", features = ["asm"] }
uuid = { version = "1", features = ["v4", "serde"] }
prost = "0.14"
prost-types = "0.14"
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
parking_lot = "0.12"
tempfile = "3"
coreml-proto = { version = "0.1.0", optional = true }
anyhow = "1.0.102"
libc = { workspace = true }
blake3 = "1"
tribunus-compute-core = { path = "compute-core", optional = true }

[features]
default = []
metal-dispatch = ["dep:metal", "dep:objc"]
server = ["dep:axum", "dep:tower-http", "dep:tokio-stream"]
ane = ["dep:coreml-proto"]
full = ["metal-dispatch", "server", "ane"]
prism-backend = ["dep:tribunus-compute-core", "tribunus-compute-core/ffi"]
full-apple = ["prism-backend", "ane", "server"]
generation-audio = []
generation-diffusion = []
generation-image = []
generation-video = []

[build-dependencies]
cc = "1.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
