[package]
name = "tribunus-compute-core"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false
description = "Tribunus Compute Kernel — core MLX backend"

[lib]
name = "tribunus_compute_core"
crate-type = ["rlib"]

[dependencies]
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }
hf-hub = "0.4"
mlx-sys = { path = "../mlx-rs-fork/mlx-sys", optional = true }
mlx-rs = { path = "../mlx-rs-fork/mlx-rs", optional = true, features = ["metal", "accelerate", "safetensors"] }
tribunus-evidence-schema = { path = "../evidence-schema" }
safetensors = "0.5"
sha2 = { version = "0.10", features = ["asm"] }
uuid = { version = "1", features = ["v4", "serde"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
parking_lot = "0.12"
notify = "6"
libc = "0.2"
lazy_static = "1.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net", "signal"] }
tokio-stream = "0.1"
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", optional = true, features = ["cors"] }
async-trait = "0.1"
thiserror = "2"
coreml-proto = { version = "0.1.0", optional = true }
prost = "0.14.4"
prost-types = "0.14.4"
tempfile = { version = "3" }
png = "0.17"
candle-core = { version = "0.8", optional = true, default-features = false }
flux-klein-mlx = { workspace = true, optional = true }
funasr-mlx = { workspace = true, optional = true }
qwen3-tts-core = { workspace = true, optional = true }
qwen3-tts-mlx = { workspace = true, optional = true }
blake3 = "1"
bytemuck = { version = "1", features = ["derive"] }
half = "2"
clap = { version = "4", features = ["derive"] }

[features]
linux-device-core = []
cpu-backend = ["linux-device-core"]
cuda-backend = ["linux-device-core"]
hip-backend = ["linux-device-core"]
level-zero-backend = ["linux-device-core"]
vulkan-backend = ["linux-device-core"]
linux-device-islands = [
  "cpu-backend",
  "cuda-backend",
  "hip-backend",
  "level-zero-backend",
  "vulkan-backend"
]
default = []
mlx-backend = ["dep:mlx-rs", "dep:mlx-sys", "dep:coreml-proto", "server", "metal-dispatch"]
prism-backend = ["dep:mlx-rs", "dep:mlx-sys", "dep:coreml-proto", "server", "metal-dispatch"]
ane = []
metal-dispatch = ["dep:metal", "dep:objc"]
server = ["dep:axum", "dep:tower-http"]

# Features referenced in cfg attributes throughout the codebase.
# These are declared as inactive features so `unexpected_cfgs` lint is clean.
candle-cpu = []
intel = []
tensix = []
storage-adapters = []
napi = []
private-development = []
image = []
msgpack = []
coreml-backend = []

# Positive capability gates — independent of execution path.
# Each gates a generation module. Enable with the backend of your choice.
# No feature here removes modules that another feature enabled.
generation-image = ["dep:mlx-rs", "dep:flux-klein-mlx"]
generation-diffusion = ["dep:mlx-rs"]
generation-video = []
generation-audio-core = []
generation-asr = ["generation-audio-core", "dep:funasr-mlx"]
generation-tts = ["generation-audio-core", "dep:qwen3-tts-core", "dep:qwen3-tts-mlx"]
generation-audio = ["generation-audio-core", "generation-asr", "generation-tts"]

[[bin]]
name = "prism"
path = "src/bin/prism.rs"

[[bin]]
name = "prism-server"
path = "src/bin/prism_server.rs"
required-features = ["server"]

[[bin]]
name = "prism-alpha"
path = "src/bin/prism_alpha.rs"

[build-dependencies]
cc = "1.2"
