[package]
name = "tribunus-compute-core"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false
description = "Tribunus Compute Kernel — core MLX backend"

[lib]
name = "tribunus_compute_core"
crate-type = ["rlib", "staticlib"]

[dependencies]
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }
block = { version = "0.1", optional = true }
hf-hub = "0.4"
tribunus-evidence-schema = { path = "../evidence-schema" }
mlx-rs = { path = "../mlx-rs-fork/mlx-rs" }
mlx-sys = { path = "../mlx-rs-fork/mlx-sys" }
safetensors = "0.5"
sha2 = { version = "0.10", features = ["asm"] }
uuid = { version = "1", features = ["v4", "serde"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
parking_lot = "0.12"
notify = "6"
libc = "0.2"
lazy_static = "1.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net", "signal"] }
tokio-stream = "0.1"
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", optional = true, features = ["cors"] }
async-trait = "0.1"
thiserror = "2"
coreml-proto = { version = "0.1.0", optional = true }
prost = "0.14.4"
prost-types = "0.14.4"
tempfile = { version = "3" }
png = "0.17"
blake3 = "1"
memmap2 = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
half = "2"
clap = { version = "4", features = ["derive"] }
tar = "0.4"

[features]
default = []
prism-backend = ["dep:coreml-proto", "server", "metal-dispatch"]
ffi = ["server", "metal-dispatch"]
ane = []
metal-dispatch = ["dep:metal", "dep:objc", "dep:block"]
server = ["dep:axum", "dep:tower-http"]

# Features referenced in cfg attributes throughout the codebase.
# These are declared as inactive features so `unexpected_cfgs` lint is clean.
candle-cpu = []
intel = []
tensix = []
storage-adapters = []
napi = []
private-development = []
image = []
msgpack = []
coreml-backend = []

# Positive capability gates — independent of execution path.
# Each gates a generation module. Enable with the backend of your choice.
# No feature here removes modules that another feature enabled.
generation-features-moved-to-separate-crates = []

[[bin]]
name = "prism"
path = "src/bin/prism.rs"

[[bin]]
name = "prism-server"
path = "src/bin/prism_server.rs"
required-features = ["server"]

[[bin]]
name = "prism-alpha"
path = "src/bin/prism_alpha.rs"

[[bin]]
name = "check-gguf-meta"
path = "src/bin/check_gguf_meta.rs"
required-features = ["prism-backend"]

[build-dependencies]
cc = "1.2"
tar = "0.4"
