[package]
name = "mlx-rs-core"
version = "1.0.0"
edition = "2021"
description = "Shared inference infrastructure for MLX Rust crates"
license = "AGPL-3.0-only"

[features]
default = []
convert = ["candle-core", "safetensors"]
tracing = []

[dependencies]
mlx-rs = { path = "../mlx-rs-fork/mlx-rs", default-features = false, features = ["metal", "accelerate"] }
mlx-sys = { path = "../mlx-rs-fork/mlx-sys" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"

# Audio processing dependencies
rubato = "0.14"  # High-quality audio resampling

# Model conversion dependencies (optional)
candle-core = { version = "0.8", optional = true }
safetensors = { version = "0.5", optional = true }
