[package]
name = "prism-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "prism_bridge"

[dependencies]
tribunus-compute-core = { path = "../compute-core", features = ["prism-backend"] }
uniffi = { version = "0.27", features = ["cli"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"
required-features = []
