[package]
name = "prism-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "napi-rs bindings for the Prism Engine — exposes ComputeEngine and PrismInferenceServer to Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8", "serde-json", "async", "tokio_rt"] }
napi-derive = "3"
tribunus-compute-core = { path = "../compute-core", features = ["prism-backend"], default-features = false }
uuid = { workspace = true }

[build-dependencies]
napi-build = "2"

[features]
default = []
