[package]
name = "mlx-sys"
version = "0.6.0-tribunus.1" # MLX C 0.6.0 → Core 0.31.2
authors.workspace = true
edition.workspace = true

description = "Low-level interface and binding generation for the mlx library"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
targets = [
  "aarch64-apple-darwin",
  "aarch64-apple-ios",
  "aarch64-apple-ios-sim",
]

[features]
default = []

accelerate = []
metal = []
stub = []

[dependencies]

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
cc.workspace = true
