[package]
name = "qwen3-tts-core"
version = "1.0.0"
edition = "2021"
description = "Backend-agnostic core logic for Qwen3-TTS (config, generation, sampling)"
keywords = ["tts", "speech-synthesis"]
categories = ["multimedia::audio"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
rand = "0.8"
