[package]
name = "qwen3-tts-mlx"
version = "1.1.0"
edition = "2021"
autoexamples = false
description = "Qwen3-TTS text-to-speech inference on Apple Silicon using MLX"
keywords = ["tts", "speech-synthesis", "mlx"]
categories = ["multimedia::audio"]
license = "MIT OR Apache-2.0"

[dependencies]
qwen3-tts-core = { path = "../qwen3-tts-core" }
mlx-rs = { path = "../../mlx-rs-fork/mlx-rs" }
mlx-sys = { path = "../../mlx-rs-fork/mlx-sys" }
mlx-rs-core = { path = "../../mlx-rs-core" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokenizers = { version = "0.21", features = ["http"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "synthesize"
path = "examples/synthesize.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"
